--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.4",
+    "@prisma/client": "^4.4.0",
     "next": "12.3.1",
+    "next-auth": "^4.12.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "type-check": "^0.4.0"
@@ -33,6 +36,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.17",
     "prettier": "^2.7.1",
+    "prisma": "^4.4.0",
     "tailwindcss": "^3.1.8",
     "typescript": "4.8.4"
   }
