--- a/package.json
+++ b/package.json
@@ -33,9 +33,12 @@
     "type-check": "^0.4.0"
   },
   "devDependencies": {
+    "@apollo/client": "^3.7.0",
     "@graphql-codegen/cli": "^2.13.7",
     "@graphql-codegen/schema-ast": "^2.5.1",
     "@graphql-codegen/typescript": "^2.7.4",
+    "@graphql-codegen/typescript-operations": "^2.5.5",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.5",
     "@graphql-codegen/typescript-resolvers": "^2.7.4",
     "@types/micro-cors": "^0.1.2",
     "@types/node": "18.7.23",
